--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,9 @@ quarkus.datasource.password=customer_muvz
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/customer
 quarkus.flyway.migrate-at-start=true
 
-# The Kafka broker location (defaults to localhost:9092)
 kafka.bootstrap.servers=localhost:9093
-
-# Configuring the incoming channel (reading from Kafka)
-mp.messaging.incoming.movies-in.connector=smallrye-kafka
-mp.messaging.incoming.movies-in.topic=movies
-mp.messaging.incoming.movies-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
-mp.messaging.incoming.movies-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-# Configuring the outgoing channel (writing to Kafka)
-mp.messaging.outgoing.movies-out.connector=smallrye-kafka
-mp.messaging.outgoing.movies-out.topic=movies
-mp.messaging.outgoing.movies-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.movies-out.value.serializer=com.br.yuristpsa.KafkaValueSerializer
+mp.messaging.outgoing.customer-out.connector=smallrye-kafka
+mp.messaging.outgoing.customer-out.topic=created.customer.0
+mp.messaging.outgoing.customer-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.customer-out.value.serializer=com.br.yuristpsa.kafka.KafkaCustomerSerializer
 
