--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=customer
 quarkus.datasource.password=customer_muvz
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/customer
+quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_URL}
 quarkus.flyway.migrate-at-start=true
-
-kafka.bootstrap.servers=localhost:9093
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
 mp.messaging.outgoing.customer-out.connector=smallrye-kafka
 mp.messaging.outgoing.customer-out.topic=created.customer.0
 mp.messaging.outgoing.customer-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
